manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-app-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-app
  template:
    metadata:
      labels:
        app: iot-app
    spec:
      containers:
        - name: iot-app
          image: wil42/playground:latest
          ports:
            - containerPort: 8888
